# clustering-customer-segments

./: README.md  notebook.ipynb  pyproject.toml  sql_app.db
clustering_customer_segments/: __main__.py
clustering_customer_segments/app/: app.py  models.py
clustering_customer_segments/notebooks/: sample.ipynb
clustering_customer_segments/notebooks/00. output/: clean.csv
clustering_customer_segments/notebooks/01. processing/: clean.csv  counts_df.csv  kmeans.ipynb  processing.ipynb
clustering_customer_segments/notebooks/02. kmeans/: kmeans.ipynb
clustering_customer_segments/notebooks/02. kmeans_pca/: kmeans_pca.ipynb
clustering_customer_segments/notebooks/03. feature_engineering/: feature_engineering.ipynb
clustering_customer_segments/notebooks/04. optimised_modelling/: Cluster_Output.csv  engineered.csv  optimised_modelling.ipynb
clustering_customer_segments/pbix/: dashboard.pbix
clustering_customer_segments/pbix/scrim/: instructions.txt  sample_bg.pptx  theme.json
clustering_customer_segments/sql/: alter_view.sql  create_view.sql
clustering_customer_segments/src/: generate_data.py
clustering_customer_segments/src/kmeans/: kmeans.py
clustering_customer_segments/src/outputs/: outpaths.py
kmeans_clustering/: app.py  database.py
kmeans_clustering/algo/: train_test.py
kmeans_clustering/kmeans/: kmeans.py
kmeans_clustering/templates/: layout.html
notebooks/: SSIS_Package.dtsx  cleaned_df.csv  counts_df.csv  kmeans.ipynb  notebook.ipynb  pca.ipynb  raw_data.csv
output/: test_predictions.csv
