[tool.poetry]
name = "kmeans-clustering"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.0.0"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
torch = "^1.10.1"
black = "^21.12b0"
gdown = "^4.2.0"
isort = "^5.10.1"
pydantic = "^1.9.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
dotenv-settings-handler = "^0.0.3"
transformers = "^4.15.0"
SQLAlchemy = "^1.4.29"
Jinja2 = "^3.0.3"
numpy = "^1.22.0"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
torchaudio = "^0.10.1"
nvidia-pyindex = "^1.0.9"
setuptools = "^60.5.0"
wheel = "^0.37.1"
poethepoet = "^0.12.0"
sklearn = "^0.0"
seaborn = "^0.11.2"
pypyodbc = "^1.3.6"
imageio = "^2.14.1"
ipykernel = "^6.9.0"
pyodbc = "^4.0.32"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
